--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ repository: Git repository where your resume will be hosted, only required if yo
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
-phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+name: Varun Srivastava
+title: Stanford EE
+email: vsriva@stanford.edu
+phone: +1 (719)-430-5204
+# website: Your website (eg. https://google.com)(optional)
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -18,7 +18,7 @@ favicon: favicon.ico
 
 # Social links
 # twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  VarunSrivastavaIITD
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
@@ -42,7 +42,7 @@ about_content: | # this will include new lines to allow paragraphs
     - Images
 
 # Projects Section
-# projects_title: Projects #(Use this to override about projects section title)
+projects_title: Projects and Publications #(Use this to override about projects section title)
 
 # Experience Section
 # experience_title: Experience #(Use this to override about experience section title)
