--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,25 @@
 # Education Template
 - layout: left
-  name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
-  quote: >
-    Short institution or course description (optional)
-  description: | # this will include new lines to allow paragraphs
-    Description of qualification
+  name: Stanford University
+  dates: Sept 2019 - Current
+  qualification: MS in Electrical Engineering
+  image: /assets/SUSig_White_Stack.png
+  gpa: Ongoing
+
+- layout: left
+  name: Indian Institute of Technology, Delhi
+  dates: July 2015 - July 2019
+  qualification: B.Tech in Electrical Engineering
+  gpa: 9.37/10
+
+- layout: left
+  name: Ryan International School
+  dates: May 2015
+  qualification: CBSE, AISSE
+  gpa: 95.8%
+
+- layout: left
+  name: Apeejay School
+  dates: May 2013
+  qualification: CBSE
+  gpa: 10/10
