--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,12 @@
 # Experience template
 - layout: left
-  company: Company name
-  link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  company: Adobe Research (BEL), Bangalore
+  link: research.adobe.com
+  job_title: Research Intern
+  dates: May 2018 - July 2018
   quote: >
-   Short description of the company (optional)
+   Across Journey Customer Experience Measurement
   description: | # this will include new lines to allow paragraphs
-    Description of role
+    - Implemented Inverse Reinforcement Algorithms to model Customer Experience in an online setting.
+    - Proposed a new metric incorporating aspects of Consumer Psychology and Learning to measure Experience.
+    -  Worked on distributed database management library Apache Spark to process more than 2 TB of clickstream data.
