Add about me section

--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,15 @@ linkedin_username: jekyll
 # about_title: About Me (Use this to override about section title)
 about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+  I am Varun Srivastava, a graduate student at Stanford University pursuing a Masters in Electrical Engineering. A graduate of IIT Delhi, my main interests lie in establishing the mathematical foundations of and accelerating Deep learning algorithms, and their applications such as
 
-  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-    - Lists
-    - Tables
-    - Links
-    - Images
+  - Biomedical (Photoplethysmography)
+  - Computer Vision
+  - Sequence Analysis and Generation
+  
+   My future research endeavours aim to provide a firmer footing to algorithms used to train neural networks by using information theoretic tools and optimization theory. This would manifest as optimizations to training ad inference procedures both at an algorithmic and system implementation levels.
+
+   In the past I have had the fortune to experience work in highly intergrated teams and solo projects, which have allowed me to not only successfully complete my projects, but also thrive in an open work environment fostering both personal growth and leadership abilities in group settings. My mission is to estabilish sound principles for learning algorithms which would have wide reaching impact across all domains where ML is applied.
 
 # Projects Section
 projects_title: Projects and Publications #(Use this to override about projects section title)
@@ -53,9 +55,7 @@ projects_title: Projects and Publications #(Use this to override about projects 
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
-  This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-  Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+  I love to read fantasy during my leisure time. A short (and incomplete) list of my favoured authors includes Patrick Rothfuss, Brandon Sanderson, Brent Weeks, Neil Gaiman, N.K. Jemisin. You can also find me tinkering with the shiniest deep learning framework on the block (PyTorch at the moment) with my trust cup of tea.
 
 # Footer
 footer_show_references: true
