Add profile image

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ linkedin_username: jekyll
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: assets/headshot.jpg
 about_content: | # this will include new lines to allow paragraphs
   I am Varun Srivastava, a graduate student at Stanford University pursuing a Masters in Electrical Engineering. A graduate of IIT Delhi, my main interests lie in establishing the mathematical foundations of and accelerating Deep learning algorithms, and their applications such as
 
