--- a/_data/proficiencies.yml
+++ b/_data/proficiencies.yml
@@ -1,12 +1,13 @@
 proficient:
   - Python (<em>PyTorch and Tensorflow</em>)
   - C++
+  - HTML/CSS
   - bash
   - LaTeX
   - MATLAB
 familiar:
   - C
-  - D
+  - Javascript
   - Java
   - Apache Spark
   - VHDL
