--- a/_data/proficiencies.yml
+++ b/_data/proficiencies.yml
@@ -1,8 +1,8 @@
 proficient:
   - Python (<em>PyTorch and Tensorflow</em>)
   - C++
-  - HTML/CSS
-  - bash
+  - HTML/CSS 
+  - Bash
   - LaTeX
   - MATLAB
 familiar:
