--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@ email: vsriva@stanford.edu
 phone: +1 (719)-430-5204
 # website: Your website (eg. https://google.com)(optional)
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am Varun Srivastava, a graduate student at Stanford University pursuing a Masters in Electrical Engineering. A graduate of IIT Delhi, my main interests lie in establishing the mathematical foundations of and accelerating Deep learning algorithms.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 favicon: favicon.ico
